--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </h2>
                 <ul class="list-disc pl-5 text-gray-700 space-y-2">
                     <li>Nhận ra những tương tác nào với AI là không đúng cách.</li>
-                    <li>Mô tả được các tương tác với AI có thể gây ảnh hưởng tiêu cực đến sức khỏe tinh thần (wellbeing) </li>
-                    <li>Phân tích được quá trình làm iệc của bản thân để rút ra kinh nghiệm tương tác với AI một cách thông minh và an toàn.</li>
+                    <li>Mô tả được các tương tác với AI có thể gây ảnh hưởng tiêu cực đến sức khỏe tinh thần (wellbeing). </li>
+                    <li>Phân tích được quá trình làm việc của bản thân để rút ra kinh nghiệm tương tác với AI một cách thông minh và an toàn.</li>
                 </ul>
             </section>
 
